Fix apposition entry: move description from title to description field and remove incorrect 'Nouns' description

--- a/docs/grammar_appendix.json
+++ b/docs/grammar_appendix.json
@@ -57,8 +57,8 @@
       },
       {
         "number": "5",
-        "title": "Apposition - A noun may modify another noun or pronoun, so long as it is in the same case as the noun it modifies.  Such nouns are called \"appositives.\"",
-        "description": "Nouns",
+        "title": "Apposition",
+        "description": "A noun may modify another noun or pronoun, so long as it is in the same case as the noun it modifies. Such nouns are called \"appositives.\"",
         "examples": [
           "Consules Marcus et Lepidus urbem servaverunt.",
           "The consuls, Marcus and Lepidus, saved the city."
