Fix point 97 title - make it concise

--- a/docs/grammar_appendix.json
+++ b/docs/grammar_appendix.json
@@ -1348,8 +1348,8 @@
       },
       {
         "number": "97",
-        "title": "The Supine is a verbal noun of the 4th declension.",
-        "description": "The supine exists only in the accusative and ablative singular. For example, from dico: Accusative: dictum; Ablative: dictu. The supine is used in two cases: the accusative to express purpose (with verbs of motion), and the ablative to express respect (often with adjectives such as facilis, difficilis, incredibilis, etc.).",
+        "title": "The Supine",
+        "description": "The supine is a verbal noun of the 4th declension that exists only in the accusative and ablative singular. For example, from dico: Accusative: dictum; Ablative: dictu. The supine is used in two cases: the accusative to express purpose (with verbs of motion), and the ablative to express respect (often with adjectives such as facilis, difficilis, incredibilis, etc.).",
         "examples": [
           "a) The ACCUSATIVE is used with verbs of motion to express purpose.",
           "Rem publicam perditum ierunt.",
