Fix point 98 title - make it concise

--- a/docs/grammar_appendix.json
+++ b/docs/grammar_appendix.json
@@ -1364,8 +1364,8 @@
       },
       {
         "number": "98",
-        "title": "The gerund is a verbal noun with only four forms: amandi, -o, -um, -o.",
-        "description": "It is never used as the subject or object of a verb (the infinitive assumes these roles). The gerund is translated into English as ____-ing (running, fighting, etc.) and is frequently used to express purpose, in the genitive with causa and in the accusative with ad.",
+        "title": "The Gerund",
+        "description": "The gerund is a verbal noun with only four forms: amandi, -o, -um, -o. It is never used as the subject or object of a verb (the infinitive assumes these roles). The gerund is translated into English as ____-ing (running, fighting, etc.) and is frequently used to express purpose, in the genitive with causa and in the accusative with ad.",
         "examples": [
           "in dicendo, in speaking",
           "dicendi causa, for the sake of speaking",
