Fix point 99 title - make it concise

--- a/docs/grammar_appendix.json
+++ b/docs/grammar_appendix.json
@@ -1378,8 +1378,8 @@
       },
       {
         "number": "99",
-        "title": "The gerundive is a verbal adjective with 1st/2nd declension endings: amandus, -a, -um, etc.",
-        "description": "One use of the gerundive is the passive periphrastic (see #101 below). The other use is to modify a noun. In this latter use, the gerundive should be translated as _____ -ing, and the accompanying noun should be translated as its direct object (e.g., ad libros legendos, for the purpose of reading books). Like the gerund, the gerundive is often used to express purpose.\nNote: such clauses function grammatically as either subject or object of the governing verb:\nIn the first example, that the line of battle was stationed here is the SUBJECT of accidit. (What happened? [That the line of battle was stationed here] happened.)\nIn the second example, that they did not undertake a war... is the OBJECT of effecit. (What did he bring about? He brought about [that they did not undertake...]).",
+        "title": "The Gerundive",
+        "description": "The gerundive is a verbal adjective with 1st/2nd declension endings: amandus, -a, -um, etc. One use of the gerundive is the passive periphrastic (see #101 below). The other use is to modify a noun. In this latter use, the gerundive should be translated as _____ -ing, and the accompanying noun should be translated as its direct object (e.g., ad libros legendos, for the purpose of reading books). Like the gerund, the gerundive is often used to express purpose.\nNote: such clauses function grammatically as either subject or object of the governing verb:\nIn the first example, that the line of battle was stationed here is the SUBJECT of accidit. (What happened? [That the line of battle was stationed here] happened.)\nIn the second example, that they did not undertake a war... is the OBJECT of effecit. (What did he bring about? He brought about [that they did not undertake...]).",
         "examples": [
           "in cohortandis militibus, in encouraging the soldiers",
           "ad cohortandos milites, for the purpose of encouraging the soldiers",
