--- a/grammar-appendix/public/grammar_appendix.json
+++ b/grammar-appendix/public/grammar_appendix.json
@@ -794,7 +794,8 @@
         ],
         "tags": [
           "Verb",
-          "Indicative Mood"
+          "Indicative Mood",
+          "Ut Clauses"
         ]
       },
       {
