Fix JSON syntax error - missing comma in examples array

--- a/docs/grammar_appendix.json
+++ b/docs/grammar_appendix.json
@@ -590,7 +590,7 @@
         "title": "Ablative with Special Deponent Verbs (\"PUFF V\" verbs) \t(LUD 59)",
         "description": "The deponents potior, utor, fruor, fungor, and vescor govern the ablative, not the accusative.",
         "examples": [
-          "Equo utor – I use a horse"
+          "Equo utor – I use a horse",
           "Cibo vescor – I feed on food",
           "Munere fungor – I perform a duty",
           "Magna voluptate fruor – I enjoy great pleasure",
